--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <img src="images/fastcampus.png" alt="fastcampus logo">
-    <h1>Welcome to Fastcampus - jungsjungouk JJJang~~~~~~~~</h1>
+    <h1>Welcome to Fastcampus - jungsjungouk JJJang~~~~~~~ 1.3~</h1>
     <p>This is a sample Nodejs application!</p>
 </body>
 </html>
